# ddpg_tensegrity

./: README.md
NTRTsim/OpenSceneGraph/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
NTRTsim/src/dev/kcaluwae/zeromq_superball/: AppSUPERball.cpp  CMakeLists.txt
ddpg_impl/: ActionNoise.py  NNDefs.py  ReplayMemory.py  TensegrityEnv.py  ddpg.py  run_experiments.sh
ddpg_impl/data/: returns_tensegrity_tau_0.0010_noise_0.20_Normal_rand_face_False_run1.npy  returns_tensegrity_tau_0.0010_noise_0.20_Normal_rand_face_False_run2.npy  returns_tensegrity_tau_0.0010_noise_0.20_Normal_rand_face_True_run1.npy  returns_tensegrity_tau_0.0010_noise_0.20_Normal_rand_face_True_run2.npy  returns_tensegrity_tau_0.0010_noise_0.20_Normal_rand_face_True_test.npy  returns_tensegrity_tau_0.0010_noise_0.20_OU_rand_face_False_run1.npy  returns_tensegrity_tau_0.0010_noise_0.20_OU_rand_face_False_run2.npy  returns_tensegrity_tau_0.0010_noise_0.20_OU_rand_face_True_run1.npy  returns_tensegrity_tau_0.0010_noise_0.20_OU_rand_face_True_run2.npy
ddpg_impl/saved_models/: checkpoint_actor_LunarLanderContinuous-v2.pt  checkpoint_actor_MinitaurBulletEnv-v0.pt  checkpoint_actor_MountainCarContinuous-v0.pt  checkpoint_actor_lunarlander_DDPG.pt  checkpoint_actor_lunarlander_DDPG_noise_OU.pt  checkpoint_actor_minitaur_DDPG_noise_OU.pt  checkpoint_actor_tensegrity_DDPG_noise_Normal.pt  checkpoint_actor_tensegrity_DDPG_noise_Normal_action_clip.pt  checkpoint_actor_tensegrity_DDPG_noise_OU.pt  checkpoint_actor_tensegrity_DDPG_noise_OU_action_clip.pt  (+28 more)
(+273 files in other folders)
